fixed spacing at bottom of hero

--- a/_includes/patterns/header/basic-page-header.scss
+++ b/_includes/patterns/header/basic-page-header.scss
@@ -10,6 +10,9 @@
             width: fit-content;
         }
     }
+    .grid-container{
+        padding-bottom: 1rem;
+    }
 }
 .basic-page-header{
     max-width: fit-content;
